# pycgl

./: README.md  pyproject.toml
micro-benchmark/: base.py
micro-benchmark-key-errs/: base.py
pycgl/: __main__.py  pycg.py
pycgl/formats/: fasten.py
pycgl/machinery/: definitions.py  imports.py  scopes.py
pycgl/processing/: base.py  cgprocessor.py  keyerrprocessor.py  postprocessor.py  preprocessor.py
pycgl/tests/: callgraph_test.py  definitions_test.py  fasten_format_test.py  imports_test.py  pointers_test.py  scopes_test.py
