[tool.hatch.build.targets.wheel]
packages = ["pycgl"]

[project]
name = "pycg-fork"
version = "0.0.8"

description = "pycgl - Practical Python Call Graphs"
readme = "README.md"
requires-python = ">=3.4"

license = {file = "LICENCE"}
authors = [
    {name = "Vitalis Salis", email = "vitsalis@gmail.com"},
    {name = "Spyros Pavlatos", email = "pavlatos@seas.upenn.edu"}   
]


classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["flake8>=6.0.0", "isort>=5.12.0", "black>=22.12.0", "mock"]

[project.urls]
"Homepage" = "https://github.com/pavlatos/pycgl"
"Bug Tracker" = "https://github.com/pavlatos/pycgl/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
# Do not enforce `E501` (line length violations) for now.
ignore = ["E501"]

exclude = [
    "micro-benchmark",
    "micro-benchmark-key-errs"
]

# Ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

